cmake_minimum_required(VERSION 3.10)
project(POJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(POJ main.cpp)

add_executable(1002 1002.cpp)

add_executable(1003 1003.cpp)

add_executable(1004 1004.cpp)

add_executable(1005 1005.cpp)

add_executable(1006 1006.cpp)

add_executable(1007 1007.cpp)

add_executable(1008 1008.cpp)

add_executable(1009 1009.cpp)

add_executable(1010 1010.cpp)

add_executable(1503 1503.cpp)

add_executable(3980 3980.cpp)

add_executable(2521 2521.cpp)

add_executable(3086 3086.cpp)