cmake_minimum_required(VERSION 3.10)
project(POJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(POJ main.cpp)

add_executable(1001 poj/1001.cpp)

add_executable(1002 poj/1002.cpp)

add_executable(1003 poj/1003.cpp)

add_executable(1004 poj/1004.cpp)

add_executable(1005 poj/1005.cpp)

add_executable(1006 poj/1006.cpp)

add_executable(1007 poj/1007.cpp)

add_executable(1008 poj/1008.cpp)

add_executable(1009 poj/1009.cpp)

add_executable(1010 poj/1010.cpp)

add_executable(1018 poj/1018.cpp)

add_executable(1328 poj/1328.cpp)

add_executable(1503 poj/1503.cpp)

add_executable(3980 poj/3980.cpp)

add_executable(2521 poj/2521.cpp)

add_executable(3086 poj/3086.cpp)


add_executable(sjtu1002 sjtu/1002.cpp)

add_executable(sjtu1003 sjtu/1003.cpp)

add_executable(sjtu1004 sjtu/1004.cpp)

add_executable(sjtu1010 sjtu/1010.cpp)

add_executable(sjtu1013 sjtu/1013.cpp)

add_executable(sjtu1015 sjtu/1015.cpp)

add_executable(sjtu1016 sjtu/1016.cpp)

add_executable(sjtu1018 sjtu/1018.cpp)

add_executable(sjtu1019 sjtu/1019.cpp)

add_executable(sjtu1011 sjtu/1011.cpp)

add_executable(sjtu1021 sjtu/1021.cpp)

add_executable(sjtu1023 sjtu/1023.cpp)

add_executable(sjtu1024 sjtu/1024.cpp)

add_executable(sjtu1032 sjtu/1032.cpp)

add_executable(sjtu1037 sjtu/1037.cpp)

add_executable(sjtu1042 sjtu/1042.cpp)

add_executable(sjtu1048 sjtu/1048.cpp)